oscaris-apis/k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: oscaris  #  Target namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx  # Matches service selector
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
