oscaris-apis/k8s/test-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-lb
  namespace: oscaris  #  Target namespace
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
