oscaris-apis/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oscaris-API
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: oscaris-api.kitchen.ke
      http:
        paths:
        - path: /
          pathType:
          backend:
            service:
              name: oscaris
