oscaris-apis/k8s/oscaris-nginx.yaml
# oscaris-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oscaris-microservices
  namespace: oscaris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.oscaris.kitchen.ke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service   # ✅ matches your Service
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /company
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /invoice
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
